--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -78,16 +83,46 @@
     <section class="bg-primary text-light p-5">
       <div class="container">
         <div class="d-md-flex justify-content-between align-items-center">
-          <h3 class="mb-3 mb-md-0">Sign up for Newsletter</h3>
+          <h3 class="mb-3 mb-md-0">Sign up for Our Newsletter</h3>
 
           <div class="input-group news-input">
             <input
               type="text"
               class="form-control"
-              placeholder="Enter E-mail address"
+              placeholder="Enter E-mail"
             />
             <button class="btn btn-dark btn-lg" type="button">Button</button>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- boxes  -->
+    <section class="p-5">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-md">
+            <div class="card bg-dark text-light">
+              <div class="card-body text-center">
+                <div class="h1 mb-3">
+                  <i class="bi bi-laptop"></i>
+                </div>
+
+                <h3 class="card-title mb-3">virtual</h3>
+
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Debitis commodi ipsa nisi?
+                </p>
+
+                <a href="#" type="button" class="btn btn-primary btn-lg"
+                  >Read More</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="col-md">abc</div>
+          <div class="col-md">abc</div>
         </div>
       </div>
     </section>
