--- a/index.html
+++ b/index.html
@@ -17,12 +17,18 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
+
+    <link
+      href="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <!-- navbar  -->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
       <div class="container">
         <a href="#" class="navbar-brand">Frontend Bootcamp</a>
 
@@ -68,7 +74,13 @@
               maiores possimus asperiores.
             </p>
 
-            <button class="btn btn-primary btn-lg">Start The Enrollemnt</button>
+            <button
+              class="btn btn-primary btn-lg"
+              data-bs-toggle="modal"
+              data-bs-target="#enroll"
+            >
+              Start The Enrollemnt
+            </button>
           </div>
           <img
             class="img-fluid w-50 d-none d-sm-block"
@@ -100,7 +112,7 @@
     <!-- boxes  -->
     <section class="p-5">
       <div class="container">
-        <div class="row text-center">
+        <div class="row text-center g-4">
           <div class="col-md">
             <div class="card bg-dark text-light">
               <div class="card-body text-center">
@@ -121,15 +133,460 @@
               </div>
             </div>
           </div>
-          <div class="col-md">abc</div>
-          <div class="col-md">abc</div>
+          <div class="col-md">
+            <div class="card bg-secondary text-light">
+              <div class="card-body text-center">
+                <div class="h1 mb-3">
+                  <i class="bi bi-person-square"></i>
+                </div>
+
+                <h3 class="card-title mb-3">Hybrid</h3>
+
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Debitis commodi ipsa nisi?
+                </p>
+
+                <a href="#" type="button" class="btn btn-dark btn-lg"
+                  >Read More</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="card bg-dark text-light">
+              <div class="card-body text-center">
+                <div class="h1 mb-3">
+                  <i class="bi bi-people"></i>
+                </div>
+
+                <h3 class="card-title mb-3">In person</h3>
+
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Debitis commodi ipsa nisi?
+                </p>
+
+                <a href="#" type="button" class="btn btn-primary btn-lg"
+                  >Read More</a
+                >
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
+
+    <!-- learn section  -->
+
+    <section class="p-5" id="learn">
+      <div class="container">
+        <div class="row align-items-center justify-content-between">
+          <div class="col-md">
+            <img src=" /asset/next.png" alt="" class="img-fluid" />
+          </div>
+
+          <div class="col-md p-5">
+            <h2>Learn The Fundamental</h2>
+            <p class="lead">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Cupiditate sint animi delectus ipsa.
+            </p>
+
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo
+              odio optio repellendus beatae facere quibusdam quae voluptatibus,
+              reiciendis ducimus, nostrum incidunt natus voluptates facilis
+              laudantium tenetur vel aperiam?
+            </p>
+
+            <a href="#" class="btn btn-light mt-3">
+              <i class="bi bi-chevron-right"></i> Read More
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- react section  -->
+    <section class="p-5 bg-dark text-light" id="learn">
+      <div class="container">
+        <div class="row align-items-center justify-content-between">
+          <div class="col-md p-5">
+            <h2>Learn React</h2>
+            <p class="lead">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Cupiditate sint animi delectus ipsa.
+            </p>
+
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo
+              odio optio repellendus beatae facere quibusdam quae voluptatibus,
+              reiciendis ducimus, nostrum incidunt natus voluptates facilis
+              laudantium tenetur vel aperiam?
+            </p>
+
+            <a href="#" class="btn btn-light mt-3">
+              <i class="bi bi-chevron-right"></i> Read More
+            </a>
+          </div>
+
+          <div class="col-md">
+            <img src=" /asset/react.jpeg" alt="" class="img-fluid" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- question Accordion  -->
+    <section class="p-5" id="questions">
+      <div class="container">
+        <h2 class="text-center mb-4">Frequently asked questions</h2>
+
+        <div class="accordion accordion-flush" id="questions">
+          <!-- item-1  -->
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#question-one"
+              >
+                Where exactly are you located?
+              </button>
+            </h2>
+            <div
+              id="question-one"
+              class="accordion-collapse collapse"
+              data-bs-parent="#questions"
+            >
+              <div class="accordion-body">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae,
+                laudantium provident. Consectetur excepturi iure culpa?
+              </div>
+            </div>
+          </div>
+
+          <!-- item-2  -->
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#question-two"
+              >
+                How much does it cost to attend?
+              </button>
+            </h2>
+            <div
+              id="question-two"
+              class="accordion-collapse collapse"
+              data-bs-parent="#questions"
+            >
+              <div class="accordion-body">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae,
+                laudantium provident. Consectetur excepturi iure culpa?
+              </div>
+            </div>
+          </div>
+
+          <!-- item-3  -->
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#question-three"
+              >
+                What do i need to know?
+              </button>
+            </h2>
+            <div
+              id="question-three"
+              class="accordion-collapse collapse"
+              data-bs-parent="#questions"
+            >
+              <div class="accordion-body">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae,
+                laudantium provident. Consectetur excepturi iure culpa?
+              </div>
+            </div>
+          </div>
+
+          <!-- item-4  -->
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#question-four"
+              >
+                How do i SIgn Up?
+              </button>
+            </h2>
+            <div
+              id="question-four"
+              class="accordion-collapse collapse"
+              data-bs-parent="#questions"
+            >
+              <div class="accordion-body">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptatum ad atque excepturi cupiditate vel, veniam eos odio
+                commodi facere. Molestias labore veniam laboriosam animi eaque.
+                Placeat nostrum consectetur repudiandae, mollitia suscipit
+                voluptates in iure officiis atque rerum eius doloremque eligendi
+                sunt ullam sapiente? Nostrum, vel. Repellat pariatur voluptas
+                quidem voluptatibus ex ab dolor delectus cum tempora!
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="instructor" class="p-5 bg-primary">
+      <div class="container">
+        <h2 class="text-center text-white">Our instructor</h2>
+        <p class="lead text-center text-white mb-5">
+          Our instructors all have 5+ years working as a web developer in the
+          industry
+        </p>
+
+        <div class="row g-4">
+          <div class="col-md-6 col-lg-3">
+            <div class="card bg-light">
+              <div class="card-body text-center">
+                <img
+                  src="https://randomuser.me/api/portraits/men/33.jpg"
+                  class="rounded-circle mb-3"
+                  alt=""
+                />
+
+                <h3 class="card-title mb-3">John denver</h3>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Reprehenderit aperiam excepturi magni at laborum corrupti
+                  saepe?
+                </p>
+
+                <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3">
+            <div class="card bg-light">
+              <div class="card-body text-center">
+                <img
+                  src="https://randomuser.me/api/portraits/men/13.jpg"
+                  class="rounded-circle mb-3"
+                  alt=""
+                />
+
+                <h3 class="card-title mb-3">Elvis Presley</h3>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Reprehenderit aperiam excepturi magni at laborum corrupti
+                  saepe?
+                </p>
+
+                <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3">
+            <div class="card bg-light">
+              <div class="card-body text-center">
+                <img
+                  src="https://randomuser.me/api/portraits/women/20.jpg"
+                  class="rounded-circle mb-3"
+                  alt=""
+                />
+
+                <h3 class="card-title mb-3">Sarah Smith</h3>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Reprehenderit aperiam excepturi magni at laborum corrupti
+                  saepe?
+                </p>
+
+                <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3">
+            <div class="card bg-light">
+              <div class="card-body text-center">
+                <img
+                  src="https://randomuser.me/api/portraits/men/19.jpg"
+                  class="rounded-circle mb-3"
+                  alt=""
+                />
+
+                <h3 class="card-title mb-3">W. Bush</h3>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Reprehenderit aperiam excepturi magni at laborum corrupti
+                  saepe?
+                </p>
+
+                <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- contact and map -->
+    <section class="p-5">
+      <div class="container">
+        <div class="row g-4">
+          <div class="col-md">
+            <h2 class="text-center mb-4">Contact Info</h2>
+            <ul class="list-group list-group-flush lead">
+              <li class="list-group-item">
+                <span class="fw-bold">Main Location:</span>50 King st., Rockdale
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">Enrollment Phone:</span>222-222-222
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">Enrollment Email:</span>abc@xyz.com
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">Student Email:</span>xyz@abc.com
+              </li>
+            </ul>
+          </div>
+
+          <div class="col-md">
+            <div id="map"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- footer  -->
+
+    <footer class="p-5 bg-dark text-white text-center position-relative">
+      <div class="container">
+        <p class="lead">Copyright &copy:2021; All Rights Reserved!</p>
+        <a href="#" class="position-absolute botttom-0 end-0">
+          <i class="bi bi-arrow-up-circle h1"></i>
+        </a>
+      </div>
+    </footer>
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="enroll"
+      tabindex="-1"
+      aria-labelledby="enrollLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <p class="lead">Fill out this form and we will get back to you</p>
+            <form>
+              <div class="mb-3">
+                <label for="first" class="col-form-label"> First Name: </label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="first-name"
+                  placeholder="Enter your first name"
+                />
+              </div>
+              <div class="mb-3">
+                <label for="last" class="col-form-label"> Last Name: </label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="last-name"
+                  placeholder="Enter your last name"
+                />
+              </div>
+              <div class="mb-3">
+                <label for="email" class="col-form-label"> Email: </label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="email"
+                  placeholder="Enter your email address"
+                />
+              </div>
+              <div class="mb-3">
+                <label for="phone" class="col-form-label">
+                  contact No. :
+                </label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="phone"
+                  placeholder="Enter your phone number"
+                />
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Cancel
+            </button>
+            <button type="button" class="btn btn-primary">Submit</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js"></script>
+
+    <script>
+      mapboxgl.accessToken =
+        "pk.eyJ1IjoidGhlc2tkIiwiYSI6ImNsY3k3cHF4eDBtODMzcW1zOHJvMjQ2am0ifQ.ovUD0up_Zmc_g4diNYd1yA";
+      var map = new mapboxgl.Map({
+        container: "map",
+        style: "mapbox://styles/mapbox/streets-v11",
+        center: [151.1376, -33.9529],
+        zoom: 15,
+      });
+    </script>
   </body>
 </html>
