some changes made

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="#navmenu">
+        <div class="collapse navbar-collapse" id="navmenu">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a href="#learn" class="nav-link">What You'll learn</a>
